--- a/less/index.css
+++ b/less/index.css
@@ -2,6 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 html,
 body,
 div,
@@ -148,13 +149,6 @@ h4 {
 .container-2 {
   max-width: 72%;
   margin: 0 auto;
-}
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxP.ttf) format('truetype');
 }
 header nav {
   padding: 10px;
