--- a/less/index.less
+++ b/less/index.less
@@ -54,6 +54,192 @@ table {
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
+	font-size: 62.5%;
 }
 
+h1, h2, h3, h4 {
+	font-family: @text-font;
+}
+
+.container {
+	max-width: 70%;
+	margin: 0 auto;
+}
+
+.container-2 {
+	max-width: 72%;
+	margin: 0 auto;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+// variables below
+@header-bg-color: rgb(238, 235, 235);
+@text-font: 'Roboto', sans-serif;
+@p-fontSize: 1.5rem;
+
+//mixins below
+.border() {
+	border: 1px solid black;
+}
+.flex() {
+	display: flex;
+}
+
+
+header {
+
+	nav {				
+		padding: 10px;
+		.flex();
+		justify-content: flex-end;
+	
+		@media (max-width: 500px) {
+				justify-content: center;
+		} //this closes the media query
+
+		a {
+			font-size: @p-fontSize;
+			color: black;
+			text-decoration: none;
+			margin: 10px;
+		} //this closes the a
+	} //this closes the nav
+	
+	.bg-color {
+		background-color: @header-bg-color;
+		padding: 30px 20px;
+
+		img {
+			width: 35%;
+			height: auto;
+		} //this closes the img
+
+		h1 {
+			font-size: 5rem;
+			padding: 0.5% 0;
+		} //this closes h1
+
+		h3 {
+			font-size: 2rem;
+			border-bottom: 1px solid grey;
+			padding: 5px 0 20px 0;
+		} //this closes the h3
+
+		p {
+			font-size: @p-fontSize;
+			padding: 20px 0 10px 0;
+		} //this closes the p
+
+		button {
+			font-size: 2rem;
+			color: white;
+			background-color: rgb(102, 102, 102);
+			padding: 1.2%;
+			border-radius: 5px;
+			margin-top: 1%;
+		} //this closes the button
+	} //this closes the bg-color
+} //this closes the header
+
+.middle-content {
+	.flex();
+	justify-content: space-between;
+	padding: 20px 0;
+	border-bottom: 1px solid black;
+
+		@media (max-width: 500px) {
+			.flex();
+			flex-direction: column;
+			width: 200%;
+		}
+
+	.intro {
+		width: 49%;
+
+		@media (max-width: 500px) {
+			div {			
+				padding: 5px;
+			}
+		}
+
+		h2 {
+			font-size: 3rem;
+		} //this closes the h2
+
+		p {
+			font-size: @p-fontSize;
+			height: 80%;
+			line-height: 2.1em;
+		} //this closes the p
+	} //this closes the intro
+
+	.skills {
+		width: 49%;
+	
+
+		h2 {
+			font-size: 3rem;
+			padding: 5px 0;
+		} //this closes the h2
+
+		ul {
+			font-size: @p-fontSize;
+			list-style-type: none;
+			padding: 0;
+			border: 1px solid #ddd;
+		
+			li {
+				padding: 8px 16px;
+  				border-bottom: 1px solid #ddd;
+			} //this closes the li
+
+			li:last-child {
+				border-bottom: none
+			} //this closes the last-child
+		} //this closes the ul
+	} //this closes the skills
+} //this closes middle-content
+
+.bottom-content {
+
+	h2 {
+		font-size: 3rem;
+		padding-top: 3%;
+		padding-bottom: 0.5%;
+	} //this closes the h2
+
+	table {
+		font-family: arial, sans-serif;
+		border-collapse: collapse;
+		width: 100%;
+		font-size: @p-fontSize;
+	  } //this closes the table
+
+	  th {
+		border: 1px solid #dddddd;
+		font-weight: bold;
+		text-align: left;
+		padding: 8px;
+	  } //this closes the th
+	  
+	  td {
+		border: 1px solid #dddddd;
+		text-align: left;
+		padding: 8px;
+	  } //this closes the ts
+	  
+	  tr:nth-child(even) {
+		background-color: #dddddd;
+	  } //this closes the tr
+} //this closes the bottom-content
+
+footer {
+	background-color: rgb(124, 124, 124);
+	font-size: 1.2rem;
+	color: white;
+	text-align: center;
+	margin: 20px 0 0;
+	padding: 10px;
+} //this closes the footer
